--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
+    "@mui/x-data-grid": "^7.9.0",
+    "@mui/x-date-pickers": "^7.9.0",
+    "dayjs": "^1.11.11",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
