--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 3000",
+    "lint": "next lint",
+    "docker:build": "docker build . -t trip_dashboard",
+    "docker:run": "docker run -p 3000:3000 trip_dashboard"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
